chore: 部分语法瑕疵调整